--- a/apps/web/app/styles/global.css
+++ b/apps/web/app/styles/global.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 @import 'tailwindcss';
 
 @plugin 'tailwindcss-animate';
@@ -5,6 +6,72 @@
 @custom-variant dark (&:is(.dark *));
 
 :root {
+  --primary-0: oklch(94.8% 0.017 289.6);
+  --primary-100: oklch(83.5% 0.058 290.5);
+  --primary-200: oklch(75.2% 0.091 289.7);
+  --primary-300: oklch(63.7% 0.137 287.3);
+  --primary-400: oklch(56.7% 0.164 285.3);
+  --primary: oklch(46.5% 0.204 280.2);
+  --primary-600: oklch(43.6% 0.188 280.2);
+  --primary-700: oklch(36.9% 0.155 280.7);
+  --primary-800: oklch(31.1% 0.126 281.6);
+  --primary-900: oklch(26.3% 0.101 282.4);
+
+  --success-50: oklch(96.5% 0.017 162.8);
+  --success-100: oklch(88.8% 0.05 161.7);
+  --success-200: oklch(83.6% 0.075 161.3);
+  --success-300: oklch(76.3% 0.106 159.4);
+  --success-400: oklch(72.2% 0.126 157.6);
+  --success: oklch(66% 0.149 154.8);
+  --success-600: oklch(61.7% 0.138 154.9);
+  --success-700: oklch(51.5% 0.113 155.3);
+  --success-800: oklch(43.2% 0.094 155.3);
+  --success-900: oklch(35.8% 0.074 156.4);
+
+  --error-50: oklch(94.4% 0.018 8.8);
+  --error-100: oklch(82.7% 0.059 11.9);
+  --error-200: oklch(74.6% 0.091 13.4);
+  --error-300: oklch(63.8% 0.139 15.7);
+  --error-400: oklch(57.9% 0.166 18.3);
+  --error: oklch(51% 0.194 24);
+  --error-600: oklch(47.6% 0.18 24);
+  --error-700: oklch(39.8% 0.148 23.5);
+  --error-800: oklch(33.3% 0.122 22.6);
+  --error-900: oklch(28% 0.099 21.7);
+
+  --warning-50: oklch(97.4% 0.022 78.2);
+  --warning-100: oklch(91.9% 0.07 77.2);
+  --warning-200: oklch(88.3% 0.102 76.8);
+  --warning-300: oklch(83.7% 0.141 74.8);
+  --warning-400: oklch(80.9% 0.158 71.5);
+  --warning: oklch(77.2% 0.174 64.6);
+  --warning-600: oklch(71.9% 0.162 64.7);
+  --warning-700: oklch(60% 0.134 65.9);
+  --warning-800: oklch(49.9% 0.11 66.7);
+  --warning-900: oklch(41.3% 0.091 67.8);
+
+  --info-50: oklch(95.3% 0.021 274);
+  --info-100: oklch(85.3% 0.069 275);
+  --info-200: oklch(78.2% 0.106 274.2);
+  --info-300: oklch(68.4% 0.16 272.1);
+  --info-400: oklch(62.7% 0.191 270.3);
+  --info: oklch(54.7% 0.239 267.4);
+  --info-600: oklch(51.2% 0.222 267.5);
+  --info-700: oklch(42.9% 0.181 267.6);
+  --info-800: oklch(36.2% 0.147 268);
+  --info-900: oklch(30.3% 0.118 268.6);
+
+  --neutral-50: oklch(93.7% 0.001 286.4);
+  --neutral-100: oklch(80.2% 0.004 286.3);
+  --neutral-200: oklch(70.4% 0.006 286.3);
+  --neutral-300: oklch(55.8% 0.009 286.1);
+  --neutral-400: oklch(46.3% 0.011 286);
+  --neutral-500: oklch(30.5% 0.016 285.4);
+  --neutral-600: oklch(28.8% 0.014 285.5);
+  --neutral-700: oklch(25% 0.011 285.6);
+  --neutral-800: oklch(21.6% 0.01 285.6);
+  --neutral-900: oklch(18.9% 0.008 285.6);
+
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
   --card: oklch(1 0 0);
@@ -14,7 +81,7 @@
   --primary: oklch(0.205 0 0);
   --primary-foreground: oklch(0.985 0 0);
   --secondary: oklch(0.97 0 0);
-  --secondary-foreground: oklch(0.205 0 0);
+  --secondary-foreground: var(--neutral-500);
   --muted: oklch(0.97 0 0);
   --muted-foreground: oklch(0.556 0 0);
   --accent: oklch(0.97 0 0);
@@ -38,6 +105,8 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+
+  font-family: 'Inter', sans-serif;
 }
 
 .dark {
@@ -47,8 +116,6 @@
   --card-foreground: oklch(0.985 0 0);
   --popover: oklch(0.145 0 0);
   --popover-foreground: oklch(0.985 0 0);
-  --primary: oklch(0.985 0 0);
-  --primary-foreground: oklch(0.205 0 0);
   --secondary: oklch(0.269 0 0);
   --secondary-foreground: oklch(0.985 0 0);
   --muted: oklch(0.269 0 0);
@@ -76,6 +143,8 @@
 }
 
 @theme inline {
+  --font-inter: 'Inter', sans-serif;
+
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --color-card: var(--card);
@@ -112,6 +181,22 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+  --color-error: var(--error-400);
+
+  /* --text-xs: 0.75rem;
+  --text-xs--line-height: calc(1 / 0.75);
+  --text-sm: 0.875rem;
+  --text-sm--line-height: calc(1.25 / 0.875);
+  --text-base: 1rem;
+  --text-base--line-height: calc(1.5 / 1);
+  --text-lg: 1.125rem;
+  --text-lg--line-height: calc(1.75 / 1.125);
+  --text-xl: 1.25rem;
+  --text-xl--line-height: calc(1.75 / 1.25);
+  --text-2xl: 1.5rem;
+  --text-2xl--line-height: calc(2 / 1.5);
+  --text-3xl: 1.875rem;
+  --text-3xl--line-height: calc(2.25 / 1.875); */
 }
 
 @layer base {
