--- a/apps/web/app/styles/global.css
+++ b/apps/web/app/styles/global.css
@@ -72,8 +72,80 @@
   --neutral-800: oklch(21.6% 0.01 285.6);
   --neutral-900: oklch(18.9% 0.008 285.6);
 
-  --background: oklch(1 0 0);
-  --foreground: oklch(0.145 0 0);
+  --white-light: #fff;
+  --stroke-50: #fcfcfc;
+  --stroke-100: #f6f6f7;
+  --stroke-200: #f2f2f3;
+  --stroke-300: #ececee;
+  --stroke-400: #e9e9ea;
+  --stroke-500: #e1e0e5;
+  --stroke-600: #cfcfd0;
+  --stroke-700: #a1a1a3;
+  --stroke-800: #7d7d7e;
+  --stroke-900: #5f5f60;
+  --neutral-50: #eaeaeb;
+  --neutral-100: #bebec1;
+  --neutral-200: #9f9fa3;
+  --neutral-300: #737379;
+  --neutral-400: #58585f;
+  --neutral-500: #2e2e37;
+  --neutral-600: #2a2a32;
+  --neutral-700: #212127;
+  --neutral-800: #19191e;
+  --neutral-900: #131317;
+  --primary-50: #edecf9;
+  --primary-100: #c8c3ed;
+  --primary-200: #ada5e5;
+  --primary-300: #877cd9;
+  --primary-400: #7063d1;
+  --primary-500: #4c3cc6;
+  --primary-600: #4537b4;
+  --primary-700: #362b8d;
+  --primary-800: #2a216d;
+  --primary-900: #201953;
+  --error-50: #f8e8ea;
+  --error-100: #eab7bc;
+  --error-200: #e0959c;
+  --error-300: #d2646f;
+  --error-400: #c94653;
+  --error-500: #bc1828;
+  --error-600: #ab1624;
+  --error-700: #85111c;
+  --error-800: #670d16;
+  --error-900: #4f0a11;
+  --success-50: #eaf7f0;
+  --success-100: #bee5d0;
+  --success-200: #9ed9ba;
+  --success-300: #72c79a;
+  --success-400: #56bd86;
+  --success-500: #2cac68;
+  --success-600: #289d5f;
+  --success-700: #1f7a4a;
+  --success-800: #185f39;
+  --success-900: #12482c;
+  --warning-50: #fff5e6;
+  --warning-100: #ffdfb0;
+  --warning-200: #ffd08a;
+  --warning-300: #ffbb54;
+  --warning-400: #ffad33;
+  --warning-500: #f90;
+  --warning-600: #e88b00;
+  --warning-700: #b56d00;
+  --warning-800: #8c5400;
+  --warning-900: #6b4000;
+  --information-50: #ebeffe;
+  --information-100: #c1ccfd;
+  --information-200: #a3b3fc;
+  --information-300: #7890fb;
+  --information-400: #5e7bfa;
+  --information-500: #365af9;
+  --information-600: #3152e3;
+  --information-700: #2640b1;
+  --information-800: #1e3289;
+  --information-900: #172669;
+
+  --background: var(--white-light);
+  --foreground: var(--neutral-300);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(1 0 0);
@@ -105,12 +177,14 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+  --section-border: var(--stroke-200);
 
   font-family: 'Inter', sans-serif;
 }
+
 .dark {
-  --background: oklch(0.145 0 0);
-  --foreground: oklch(0.985 0 0);
+  --background: var(--neutral-900);
+  --foreground: var(--neutral-200);
   --card: oklch(0.145 0 0);
   --card-foreground: oklch(0.985 0 0);
   --popover: oklch(0.145 0 0);
@@ -139,6 +213,7 @@
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(0.269 0 0);
   --sidebar-ring: oklch(0.439 0 0);
+  --section-border: var(--neutral-800);
 }
 
 @theme inline {
@@ -192,21 +267,203 @@
   --color-neutral-700: var(--neutral-700);
   --color-neutral-800: var(--neutral-800);
   --color-neutral-900: var(--neutral-900);
+  --color-stroke-200: var(--stroke-200);
+  --color-white-white-light: var(--white-white-light);
+  --color-section-border: var(--section-border);
 
-  /* --text-xs: 0.75rem;
-  --text-xs--line-height: calc(1 / 0.75);
-  --text-sm: 0.875rem;
-  --text-sm--line-height: calc(1.25 / 0.875);
-  --text-base: 1rem;
-  --text-base--line-height: calc(1.5 / 1);
-  --text-lg: 1.125rem;
-  --text-lg--line-height: calc(1.75 / 1.125);
-  --text-xl: 1.25rem;
-  --text-xl--line-height: calc(1.75 / 1.25);
-  --text-2xl: 1.5rem;
-  --text-2xl--line-height: calc(2 / 1.5);
-  --text-3xl: 1.875rem;
-  --text-3xl--line-height: calc(2.25 / 1.875); */
+  /* Extend the default font family */
+  --font-family-inter: Inter, sans-serif;
+
+  /* 12px variants */
+  --text-12: 0.75rem;
+  --text-12--line-height: normal;
+  --text-12--letter-spacing: -0.015rem;
+  --text-12--font-weight: 400;
+
+  --text-12-medium: 0.75rem;
+  --text-12-medium--line-height: normal;
+  --text-12-medium--letter-spacing: -0.015rem;
+  --text-12-medium--font-weight: 500;
+
+  --text-12-semibold: 0.75rem;
+  --text-12-semibold--line-height: normal;
+  --text-12-semibold--letter-spacing: -0.015rem;
+  --text-12-semibold--font-weight: 600;
+
+  /* 14px variants */
+  --text-14: 0.875rem;
+  --text-14--line-height: 1.5;
+  --text-14--letter-spacing: -0.0175rem;
+  --text-14--font-weight: 400;
+
+  --text-14-medium: 0.875rem;
+  --text-14-medium--line-height: 1.5;
+  --text-14-medium--letter-spacing: -0.0175rem;
+  --text-14-medium--font-weight: 500;
+
+  --text-14-semibold: 0.875rem;
+  --text-14-semibold--line-height: 1.5;
+  --text-14-semibold--letter-spacing: -0.0175rem;
+  --text-14-semibold--font-weight: 600;
+
+  /* 16px variants */
+  --text-16: 1rem;
+  --text-16--line-height: 1.5;
+  --text-16--letter-spacing: -0.02rem;
+  --text-16--font-weight: 400;
+
+  --text-16-medium: 1rem;
+  --text-16-medium--line-height: 1.5;
+  --text-16-medium--letter-spacing: -0.02rem;
+  --text-16-medium--font-weight: 500;
+
+  --text-16-semibold: 1rem;
+  --text-16-semibold--line-height: 1.5;
+  --text-16-semibold--letter-spacing: -0.02rem;
+  --text-16-semibold--font-weight: 600;
+
+  /* 18px variants */
+  --text-18: 1.125rem;
+  --text-18--line-height: 1.5;
+  --text-18--letter-spacing: -0.0225rem;
+  --text-18--font-weight: 400;
+
+  --text-18-medium: 1.125rem;
+  --text-18-medium--line-height: 1.5;
+  --text-18-medium--letter-spacing: -0.0225rem;
+  --text-18-medium--font-weight: 500;
+
+  --text-18-semibold: 1.125rem;
+  --text-18-semibold--line-height: 1.5;
+  --text-18-semibold--letter-spacing: -0.0225rem;
+  --text-18-semibold--font-weight: 600;
+
+  /* 20px variants */
+  --text-20: 1.25rem;
+  --text-20--line-height: 1.5;
+  --text-20--letter-spacing: -0.025rem;
+  --text-20--font-weight: 400;
+
+  --text-20-medium: 1.25rem;
+  --text-20-medium--line-height: 1.5;
+  --text-20-medium--letter-spacing: -0.025rem;
+  --text-20-medium--font-weight: 500;
+
+  --text-20-semibold: 1.25rem;
+  --text-20-semibold--line-height: 1.5;
+  --text-20-semibold--letter-spacing: -0.025rem;
+  --text-20-semibold--font-weight: 600;
+
+  /* 24px variants */
+  --text-24: 1.5rem;
+  --text-24--line-height: 1.5;
+  --text-24--letter-spacing: -0.03rem;
+  --text-24--font-weight: 400;
+
+  --text-24-medium: 1.5rem;
+  --text-24-medium--line-height: 1.5;
+  --text-24-medium--letter-spacing: -0.03rem;
+  --text-24-medium--font-weight: 500;
+
+  --text-24-semibold: 1.5rem;
+  --text-24-semibold--line-height: 1.5;
+  --text-24-semibold--letter-spacing: -0.045rem;
+  --text-24-semibold--font-weight: 600;
+
+  /* 32px variants */
+  --text-32: 2rem;
+  --text-32--line-height: 1.5;
+  --text-32--letter-spacing: -0.04rem;
+  --text-32--font-weight: 400;
+
+  --text-32-medium: 2rem;
+  --text-32-medium--line-height: 1.5;
+  --text-32-medium--letter-spacing: -0.04rem;
+  --text-32-medium--font-weight: 500;
+
+  --text-32-semibold: 2rem;
+  --text-32-semibold--line-height: 1.3;
+  --text-32-semibold--letter-spacing: -0.06rem;
+  --text-32-semibold--font-weight: 600;
+
+  /* 36px variants */
+  --text-36: 2.25rem;
+  --text-36--line-height: 1.5;
+  --text-36--letter-spacing: -0.0675rem;
+  --text-36--font-weight: 400;
+
+  --text-36-medium: 2.25rem;
+  --text-36-medium--line-height: 1.5;
+  --text-36-medium--letter-spacing: -0.0675rem;
+  --text-36-medium--font-weight: 500;
+
+  --text-36-semibold: 2.25rem;
+  --text-36-semibold--line-height: 1.3;
+  --text-36-semibold--letter-spacing: -0.0675rem;
+  --text-36-semibold--font-weight: 600;
+
+  /* 40px variants */
+  --text-40: 2.5rem;
+  --text-40--line-height: 1.5;
+  --text-40--letter-spacing: -0.075rem;
+  --text-40--font-weight: 400;
+
+  --text-40-medium: 2.5rem;
+  --text-40-medium--line-height: 1.5;
+  --text-40-medium--letter-spacing: -0.075rem;
+  --text-40-medium--font-weight: 500;
+
+  --text-40-semibold: 2.5rem;
+  --text-40-semibold--line-height: 1.5;
+  --text-40-semibold--letter-spacing: -0.075rem;
+  --text-40-semibold--font-weight: 600;
+
+  /* 48px variants */
+  --text-48: 3rem;
+  --text-48--line-height: 1.5;
+  --text-48--letter-spacing: -0.09rem;
+  --text-48--font-weight: 400;
+
+  --text-48-medium: 3rem;
+  --text-48-medium--line-height: 1.5;
+  --text-48-medium--letter-spacing: -0.09rem;
+  --text-48-medium--font-weight: 500;
+
+  --text-48-semibold: 3rem;
+  --text-48-semibold--line-height: 1.2;
+  --text-48-semibold--letter-spacing: -0.09rem;
+  --text-48-semibold--font-weight: 600;
+
+  /* 56px variants */
+  --text-56: 3.5rem;
+  --text-56--line-height: 1.5;
+  --text-56--letter-spacing: -0.14rem;
+  --text-56--font-weight: 400;
+
+  --text-56-medium: 3.5rem;
+  --text-56-medium--line-height: 1.5;
+  --text-56-medium--letter-spacing: -0.105rem;
+  --text-56-medium--font-weight: 500;
+
+  --text-56-semibold: 3.5rem;
+  --text-56-semibold--line-height: 1.5;
+  --text-56-semibold--letter-spacing: -0.105rem;
+  --text-56-semibold--font-weight: 600;
+
+  /* 72px variants */
+  --text-72: 4.5rem;
+  --text-72--line-height: 1.5;
+  --text-72--letter-spacing: -0.18rem;
+  --text-72--font-weight: 400;
+
+  --text-72-medium: 4.5rem;
+  --text-72-medium--line-height: 1.5;
+  --text-72-medium--letter-spacing: -0.135rem;
+  --text-72-medium--font-weight: 500;
+
+  --text-72-semibold--line-height: 1.5;
+  --text-72-semibold--letter-spacing: -0.135rem;
+  --text-72-semibold--font-weight: 600;
 }
 
 @layer base {
