--- a/apps/web/app/styles/global.css
+++ b/apps/web/app/styles/global.css
@@ -147,9 +147,9 @@
 
   --background: var(--white-light);
   --foreground: var(--neutral-300);
-  --card: oklch(1 0 0);
+  --card: var(--white-light);
   --card-foreground: oklch(0.145 0 0);
-  --popover: oklch(1 0 0);
+  --popover: var(--white-light);
   --popover-foreground: oklch(0.145 0 0);
   --primary: oklch(0.205 0 0);
   --primary-foreground: oklch(0.985 0 0);
@@ -191,9 +191,9 @@
 .dark {
   --background: var(--neutral-900);
   --foreground: var(--neutral-200);
-  --card: oklch(0.145 0 0);
+  --card: var(--neutral-800);
   --card-foreground: oklch(0.985 0 0);
-  --popover: oklch(0.145 0 0);
+  --popover: var(--neutral-800);
   --popover-foreground: oklch(0.985 0 0);
   --secondary: oklch(0.269 0 0);
   --secondary-foreground: oklch(0.985 0 0);
